@@ -25,6 +25,10 @@
  * @version     2.2
  * @date        February 24, 2013
  * Refactor post meta details into a better string output
+ *
+ * @version     2.2.3
+ * @date        November 16, 2013
+ * Commented out the "Page Permalink" as an unpopular feature
  */
 
 /** Set count variable for author 'mullet' loop */
@@ -80,7 +84,7 @@ $count++; ?>
     <?php } /** End if - is single */
 
     /** Show a shortlink on the page - requires Jetpack be active */
-    dmm_page_link( $text = __( 'Page Permalink', 'desk-mess-mirrored' ) ); ?>
+    // dmm_page_link( $text = __( 'Page Permalink', 'desk-mess-mirrored' ) ); ?>
 
     <p class="single-meta"><?php the_tags(); ?></p>
 
